syntax = "proto3";
import "common/ComponentRequest.proto";
import "bannerswiper/BannerSwiperResponse.proto";
option java_package="cn.migu.selection.proto.bannerswiper";
option java_outer_classname="_BannerSwiperService";
option java_generic_services=true;

service BannerSwiperService {
	rpc getBannerSwiperInfo (ComponentRequest) returns (BannerSwiperResponse);
}